fix(global): index.html
update index.html

Meta info: LK-000000

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Title</title>
 </head>
 <body>
- Example TEST test ff ff ааffasdasdasfasfasdasasdasdasdasddfsdffffasdasdasdasd
+ Example TEST 1
 </body>
 </html>
